src/test/ui/no-send-res-ports.stderr
error[E0277]: `std::rc::Rc<()>` cannot be sent between threads safely
  --> $DIR/no-send-res-ports.rs:27:5
   |
LL |     thread::spawn(move|| {
   |     ^^^^^^^^^^^^^ `std::rc::Rc<()>` cannot be sent between threads safely
   | 
  ::: $SRC_DIR/libstd/thread/mod.rs:LL:COL
   |
LL |     F: FnOnce() -> T, F: Send + 'static, T: Send + 'static
   |                          ---- required by this bound in `std::thread::spawn`
   |
   = help: within `[closure@$DIR/no-send-res-ports.rs:27:19: 31:6 x:main::Foo]`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<()>`
   = note: required because it appears within the type `Port<()>`
   = note: required because it appears within the type `main::Foo`
   = note: required because it appears within the type `[closure@$DIR/no-send-res-ports.rs:27:19: 31:6 x:main::Foo]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
